--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>big-data-book</groupId>
-  <artifactId>big-data-book</artifactId>
+  <groupId>tp-primer-parcial</groupId>
+  <artifactId>tp-primer-parcial</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <name>big-data-book</name>
   <build>
-    <sourceDirectory>src</sourceDirectory>
-    <testSourceDirectory>test</testSourceDirectory>
+    <sourceDirectory>src/java</sourceDirectory>
+    <testSourceDirectory>src/java/tp1Parcial/test</testSourceDirectory>
     <resources>
       <resource>
         <directory>resources</directory>
@@ -25,6 +25,19 @@
       <artifactId>clojure-maven-plugin</artifactId>
       <version>1.3.10</version>
       <extensions>true</extensions>
+    </plugin>
+    <plugin>
+      <artifactId>maven-assembly-plugin</artifactId>
+      <configuration>
+        <archive>
+          <manifest>
+            <mainClass>tp1Parcial.Main</mainClass>
+          </manifest>
+        </archive>
+        <descriptorRefs>
+          <descriptorRef>jar-with-dependencies</descriptorRef>
+        </descriptorRefs>
+      </configuration>
     </plugin>
   </plugins>
   </build>
@@ -141,6 +154,8 @@
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-core</artifactId>
       <version>0.20.2-dev</version>
+       <!-- Comentar la línea de abajo para ejecutar directamente el proyecto-->
+       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.zookeeper</groupId>
