--- a/speedlayer/pom.xml
+++ b/speedlayer/pom.xml
@@ -15,13 +15,6 @@
 	</parent>
 
 	<dependencies>
-		<!--
-		<dependency>
-			<groupId>pol.una.py.bigdata</groupId>
-			<artifactId>batchlayer</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
-		</dependency>
-		-->
 		<dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
 			<artifactId>hibernate-jpa-2.0-api</artifactId>
@@ -61,7 +54,6 @@
 			<artifactId>asm</artifactId>
 			<version>6.2.1</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
@@ -85,16 +77,13 @@
 			<version>1.0.1.Final</version>
 			<scope>provided</scope>
 		</dependency>
-
-
-		<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
 		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>mail</artifactId>
-			<version>1.5.0-b01</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.5</version>
 		</dependency>
-
 	</dependencies>
+
 	<build>
 		<finalName>speedlayer</finalName>
 
@@ -109,7 +98,6 @@
 		<pluginManagement>
 			<!-- Plugin para deployar la app en el jboss -->
 			<plugins>
-				<!--
 				<plugin>
 					<groupId>org.jboss.as.plugins</groupId>
 					<artifactId>jboss-as-maven-plugin</artifactId>
@@ -125,7 +113,6 @@
 					<artifactId>wildfly-maven-plugin</artifactId>
 					<version>1.1.0.Alpha1</version>
 				</plugin>
-				-->
 				<plugin>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<configuration>
